installed axios, set up ShowUsers

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "- Building a RESTful API.\r - Performing CRUD operations.\r - Writing API endpoints.",
   "main": "db.js",
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
